--- a/questions.ipynb
+++ b/questions.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,20 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le nombre total de logements s'élèvent à plus de : 5555 logements.\n"
+      "Le nombre total de logements s'élève à plus de : 5555 logements.\n"
      ]
     }
    ],
    "source": [
+    "# Récupère et stocke le nombre total de documents dans la collection - \"airbnb\"\n",
     "nombres_log = db.airbnb.count_documents({})\n",
-    "print(f\"Le nombre total de logements s'élèvent à plus de : {nombres_log} logements.\")"
+    "\n",
+    "# Affiche le nombre total de logements disponibles dans la collection \"airbnb\"\n",
+    "# valeur est formatée pour être affichée avec un message explicatif\n",
+    "print(f\"Le nombre total de logements s'élève à plus de : {nombres_log} logements.\")\n"
    ]
   },
   {
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -92,33 +96,37 @@
      "output_type": "stream",
      "text": [
       "Le prix moyen par ville en triant les villes par prix décroissant est de:\n",
-      "                       _id                           prix_moyen\n",
-      "0               Hong Kong  762.4781906300484652665589660743134\n",
-      "1          Rio De Janeiro  525.8059701492537313432835820895522\n",
-      "2   Other (International)                               445.75\n",
-      "3                Istanbul  367.9454545454545454545454545454545\n",
-      "4                   Kauai  288.8208955223880597014925373134328\n",
-      "5                    Maui  286.5882352941176470588235294117647\n",
-      "6                    Oahu  212.2964426877470355731225296442688\n",
-      "7                  Sydney  197.7142857142857142857142857142857\n",
-      "8          The Big Island  179.4604316546762589928057553956835\n",
-      "9                New York  139.6260296540362438220757825370675\n",
-      "10       Other (Domestic)                               128.00\n",
-      "11                                                      115.50\n",
-      "12              Barcelona  100.9477848101265822784810126582278\n",
-      "13               Montreal  100.2330246913580246913580246913580\n",
-      "14                  Porto  69.12815884476534296028880866425993\n"
+      "              _id                           prix_moyen\n",
+      "0      Hong Kong  773.7866666666666666666666666666667\n",
+      "1         Brazil  525.3465346534653465346534653465347\n",
+      "2          China  405.3684210526315789473684210526316\n",
+      "3         Turkey  368.1467473524962178517397881996974\n",
+      "4      Australia  197.8065573770491803278688524590164\n",
+      "5  United States  185.7692307692307692307692307692308\n",
+      "6          Spain  100.8262243285939968404423380726698\n",
+      "7         Canada  100.1171032357473035439137134052388\n",
+      "8       Portugal  69.18198198198198198198198198198198\n",
+      " \n",
+      "Par exemple, New-york est environ à 140$\n"
      ]
     }
    ],
    "source": [
+    "# Je fais une aggrégation sur la collection pour calculer le prix moyen par ville\n",
     "prix_moyen_par_ville = db.airbnb.aggregate([\n",
-    "    {\"$group\": {\"_id\": \"$address.market\", \"prix_moyen\": {\"$avg\": \"$price\"}}}, #address.market pour retrouver les prix par ville\n",
+    "    # Grouper par ville (champ \"address.market\") et moyenne\n",
+    "    {\"$group\": {\"_id\": \"$address.country\", \"prix_moyen\": {\"$avg\": \"$price\"}}}, \n",
+    "    # Je trie les résultats par prix moyen en ordre décroissant\n",
     "    {\"$sort\": {\"prix_moyen\": -1}}\n",
     "])\n",
     "\n",
+    "# Je convertie le résultat de l'agrégation en DataFrame et j'arrondit les valeurs à 2 décimales\n",
     "df_prix_moyen_ville = pd.DataFrame(list(prix_moyen_par_ville)).round(2)\n",
-    "print(f\"Le prix moyen par ville en triant les villes par prix décroissant est de:\\n\", df_prix_moyen_ville)"
+    "\n",
+    "# Affichage des prix moyens par ville, par ordre décroissant\n",
+    "print(f\"Le prix moyen par ville en triant les villes par prix décroissant est de:\\n\", df_prix_moyen_ville)\n",
+    "\n",
+    "print(f\" \\nPar exemple, New-york est environ à 140$\")\n"
    ]
   },
   {
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +163,7 @@
        "'\\n      \"amenities\": [\\n    \"Internet\",\\n    \"Wifi\",\\n    \"Air conditioning\",\\n    \"Kitchen\",\\n    \"Buzzer/wireless intercom\",\\n    \"Heating\",\\n    \"Smoke detector\",\\n    \"Carbon monoxide detector\",\\n    \"Essentials\",\\n    \"Lock on bedroom door\"\\n  ]\\n'"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,19 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le nombre de propriétés incluent le Wifi dans les équipements est de : 5303 equipements.\n"
+      "Le nombre de propriétés incluent le Wifi dans les équipements est de : 5337 equipements.\n"
      ]
     }
    ],
    "source": [
-    "proprietes_equipements_wifi = db.airbnb.count_documents({\"amenities\": {\"$in\": [\"Wifi\"]}}) #car dans amenities on retrouve Wifi, operator $in\n",
+    "proprietes_equipements_wifi = db.airbnb.count_documents({\"amenities\": {\"$in\": [\"Wifi\", \"Internet\"]}}) #car dans amenities on retrouve Wifi et Internet\n",
     "print(f\"Le nombre de propriétés incluent le Wifi dans les équipements est de : {proprietes_equipements_wifi} equipements.\")"
    ]
   },
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -304,30 +312,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hotes_populaires = db.airbnb.aggregate([\\n    {\"$group\": {\"_id\": \"$host.host_name\", \"count\": { \"$sum\": \"$number_of_reviews\" }\\n               }},\\n    {\"$sort\": {\"total_reviews\": -1}},\\n    {\"$limit\": 5}\\n])\\ndf_hotes_populaires = pd.DataFrame(list(hotes_populaires))\\nprint(f\"Voici les 5 hôtes les plus populaires où les propriétés ont reçu le plus de commentaires :\\n\", df_hotes_populaires)\\n'"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voici les 5 hôtes les plus populaires (nombre total de commentaires) :\n",
+      "                                                name  \\\n",
+      "0  Ligne verte - à 15 min de métro du centre ville.   \n",
+      "1                           Ribeira Charming Duplex   \n",
+      "2                Ótimo Apto proximo Parque Olimpico   \n",
+      "3                       Apt Linda Vista Lagoa - Rio   \n",
+      "4                    Modern Spacious 1 Bedroom Loft   \n",
+      "\n",
+      "   le plus haut nombres de commentaires  \n",
+      "0                                     0  \n",
+      "1                                    51  \n",
+      "2                                     0  \n",
+      "3                                     0  \n",
+      "4                                     0  \n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"hotes_populaires = db.airbnb.aggregate([\n",
-    "    {\"$group\": {\"_id\": \"$host.host_name\", \"count\": { \"$sum\": \"$number_of_reviews\" }\n",
-    "               }},\n",
-    "    {\"$sort\": {\"total_reviews\": -1}},\n",
+    "hotes_populaires = db.airbnb.aggregate([\n",
+    "    # Projette le nom de l'hôte et le nombre de commentaires (sinon liste vide si aucun commentaire)\n",
+    "    {\"$project\": {\"_id\": 0,\"name\": 1, \"le plus haut nombres de commentaires\": {\"$size\": {\"$ifNull\": [\"$reviews\", []]}}}},\n",
+    "    # Trier les hôtes par nombre de commentaires de manière décroissante\n",
+    "    {\"$sort\": {\"le plus haut nombres de commentaire\": -1}},\n",
+    "    # Limiter le résultat aux 5 hôtes les plus populaires\n",
     "    {\"$limit\": 5}\n",
     "])\n",
-    "df_hotes_populaires = pd.DataFrame(list(hotes_populaires))\n",
-    "print(f\"Voici les 5 hôtes les plus populaires où les propriétés ont reçu le plus de commentaires :\\n\", df_hotes_populaires)\n",
-    "\"\"\""
+    "\n",
+    "# Affiche les 5 hôtes avec le plus grand nombre de commentaires\n",
+    "print(f\"Voici les 5 hôtes les plus populaires (nombre total de commentaires) :\\n\", df_hotes_populaires)\n",
+    "\n",
+    "# Convertit les résultats en DataFrame pour les afficher\n",
+    "df_hotes_populaires = pd.DataFrame(list(hotes_populaires))"
    ]
   },
   {
@@ -339,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -347,23 +370,29 @@
      "output_type": "stream",
      "text": [
       "Voici le top 6 des villes avec le plus de logements disponibles à la location :\n",
-      "          _id  nombre_logements\n",
-      "0   Istanbul               660\n",
-      "1   Montreal               648\n",
-      "2  Barcelona               632\n",
-      "3  Hong Kong               619\n",
-      "4     Sydney               609\n",
-      "5   New York               607\n"
+      "              _id  nombre_logements\n",
+      "0  United States              1222\n",
+      "1         Turkey               661\n",
+      "2         Canada               649\n",
+      "3          Spain               633\n",
+      "4      Australia               610\n",
+      "5         Brazil               606\n"
      ]
     }
    ],
    "source": [
+    "# Regroupe les logements par pays et compte leur nombre\n",
     "six_villes_hautes_locations = db.airbnb.aggregate([\n",
-    "    {\"$group\": {\"_id\": \"$address.market\", \"nombre_logements\": {\"$sum\": 1}}},\n",
+    "    {\"$group\": {\"_id\": \"$address.country\", \"nombre_logements\": {\"$sum\": 1}}},\n",
+    "    # Trie par nombre de logements décroissant\n",
     "    {\"$sort\": {\"nombre_logements\": -1}},\n",
+    "    # Limite à 6 résultats\n",
     "    {\"$limit\": 6}\n",
     "])\n",
+    "\n",
+    "# Convertit les résultats en DataFrame\n",
     "df_villes_plus_logements = pd.DataFrame(list(six_villes_hautes_locations))\n",
+    "\n",
     "print(\"Voici le top 6 des villes avec le plus de logements disponibles à la location :\\n\", df_villes_plus_logements)"
    ]
   },
@@ -376,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -414,27 +443,27 @@
      "text": [
       "Top 20 des utilisateurs ayant fait le plus de commentaires :\n",
       " \n",
-      "           _id       nom  nombre_commentaires\n",
-      "0    20775242    Filipe                   24\n",
-      "1    67084875      Nick                   13\n",
-      "2     2961855       Uge                   10\n",
-      "3   162027327     Thien                    9\n",
-      "4    20991911      Lisa                    9\n",
-      "5     1705870     David                    8\n",
-      "6    60816198      Todd                    8\n",
-      "7    12679057      Jodi                    8\n",
-      "8    55241576  Courtney                    8\n",
-      "9    69140895      Lisa                    8\n",
-      "10   78093968     David                    7\n",
-      "11   47303133     Lance                    7\n",
-      "12   57325457      Mary                    6\n",
-      "13   24667379     Karen                    6\n",
-      "14   86665925     Chris                    6\n",
-      "15   25715809     Megan                    6\n",
-      "16   73708321   Gonzalo                    6\n",
-      "17  128210181   Branden                    6\n",
-      "18   61469899      Erik                    6\n",
-      "19   34005800       Dan                    6\n",
+      "          _id  nombre_commentaires\n",
+      "0      David                 1072\n",
+      "1    Michael                  858\n",
+      "2     Daniel                  745\n",
+      "3      Sarah                  723\n",
+      "4      Laura                  665\n",
+      "5       John                  615\n",
+      "6      Chris                  553\n",
+      "7     Andrew                  545\n",
+      "8    Jessica                  515\n",
+      "9       Anna                  503\n",
+      "10     James                  503\n",
+      "11      Alex                  502\n",
+      "12  Jennifer                  475\n",
+      "13      Paul                  472\n",
+      "14      Mark                  452\n",
+      "15     Peter                  447\n",
+      "16      Lisa                  444\n",
+      "17  Michelle                  400\n",
+      "18     Maria                  400\n",
+      "19    Thomas                  396\n",
       " \n",
       " Il y a 56 commentaires au totals sur les 20 utilisateurs ayant fait le plus de commentaires\n"
      ]
@@ -443,7 +472,7 @@
    "source": [
     "vingt_utilisateur_comment = db.airbnb.aggregate([\n",
     "    {\"$unwind\": \"$reviews\"},\n",
-    "    {\"$group\": {\"_id\": \"$reviews.reviewer_id\", \"nom\": {\"$first\": \"$reviews.reviewer_name\"}, \"nombre_commentaires\": {\"$sum\": 1}}},\n",
+    "    {\"$group\": {\"_id\": \"$reviews.reviewer_name\", \"nombre_commentaires\": {\"$sum\": 1}}},\n",
     "    {\"$sort\": {\"nombre_commentaires\": -1}},\n",
     "    {\"$limit\": 20}\n",
     "])\n",
@@ -461,28 +490,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parmis tout les logements de Sydney, la note moyenne des visiteurs est de     _id note_moyenne\n",
-      "0  None         None\n"
+      "La note moyenne des visiteurs des logements à Sydney est de :\n",
+      "93.45567010309279\n"
      ]
     }
    ],
    "source": [
-    "notes_moyennes_visiteurs = db.airbnb.aggregate([\n",
+    "# 1 - je filtre les logements situés à Sydney et je calcule la note mean des visiteurs\n",
+    "sydney = db.airbnb.aggregate([\n",
     "    {\"$match\": {\"address.market\": \"Sydney\"}},\n",
-    "    {\"$group\": {\"_id\": None,\n",
-    "                \"note_moyenne\": {\"$avg\": \"$review_scores.rating\"}\n",
-    "               }\n",
-    "    }\n",
+    "    {\"$group\": {\"_id\": None, \"avg_note\": {\"$avg\": \"$review_scores.review_scores_rating\"}}}\n",
     "])\n",
-    "df_notes_moyenne_sydney = pd.DataFrame(list(notes_moyennes_visiteurs))\n",
-    "print(f\"Parmis tout les logements de Sydney, la note moyenne des visiteurs est de\",df_notes_moyenne_sydney)"
+    "print(f'La note moyenne des visiteurs des logements à Sydney est de :')\n",
+    "\n",
+    "# Résultats\n",
+    "for result in sydney:\n",
+    "    print(result['avg_note'])"
    ]
   },
   {
@@ -494,16 +524,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voici les logements contenant 'park' dans leur nom :\n",
+      "                                                   name\n",
+      "0    Sydney Hyde Park City Apartment (checkin from ...\n",
+      "1                     UWS Brownstone Near Central Park\n",
+      "2                     Triple room Barcelona Guell park\n",
+      "3                    Park Guell apartment with terrace\n",
+      "4    aOceanside Hawaii Apartment Studio Kitchen Par...\n",
+      "..                                                 ...\n",
+      "161                 Park Slope Private Bed+Livingroom!\n",
+      "162                    Waikiki Condo with Free Parking\n",
+      "163  Sydney Studio in Glebe Close to CBD. SparklinC...\n",
+      "164  1921 15kms from Sydney CBD with Pool Spa parking.\n",
+      "165                  Big 2bdm, Views, WIFI and carpark\n",
+      "\n",
+      "[166 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logements_parks = db.airbnb.find({\n",
+    "    \"name\": {\"$regex\": \"park\",\n",
+    "             \"$options\": \"i\"}},\n",
+    "                                 {\"_id\": 0,\n",
+    "                                  \"name\": 1})\n",
+    "df_logements_parks = pd.DataFrame(list(logements_parks))\n",
+    "print(\"Voici les logements contenant 'park' dans leur nom :\\n\", df_logements_parks)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "13. (bonus) Afficher le nom des logements ayant une lattitude comprise entre 36,1 et 40,6 dont le prix est entre 100 et 200 euros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logements ayant une latitude entre 36,1 et 40,6 et un prix entre 100 et 200 euros :\n",
+      "\n",
+      "                                             name\n",
+      "0              Cozy Comfy Suite of Rockaway Beach\n",
+      "1       Coney Island MCU Park Wi fi Cable Apt****\n",
+      "2  Sheepshead Bay, 1-bdr apartment. Close to all!\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_lat_prix = db.airbnb.find({\n",
+    "    \"address.location.coordinates.1\": {\"$gte\": 36.1, \"$lte\": 40.6},\n",
+    "    \"price\": {\"$gte\": 100, \"$lte\": 200}\n",
+    "}, {\"name\": 1, \"_id\": 0})\n",
+    "\n",
+    "print(\"Logements ayant une latitude entre 36,1 et 40,6 et un prix entre 100 et 200 euros :\\n\")\n",
+    "print(pd.DataFrame(list(log_lat_prix)))"
    ]
   },
   {
