--- a/questions.ipynb
+++ b/questions.ipynb
@@ -126,7 +126,7 @@
     "# Affichage des prix moyens par ville, par ordre décroissant\n",
     "print(f\"Le prix moyen par ville en triant les villes par prix décroissant est de:\\n\", df_prix_moyen_ville)\n",
     "\n",
-    "print(f\" \\nPar exemple, New-york est environ à 140$\")\n"
+    "print(f\" \\nPar exemple, la Turquie est environ à 368 euros. \")\n"
    ]
   },
   {
